--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-15  Stan Shebs  <shebs@apple.com>
+
+	* config/rs6000/rs6000.h: Fix a comment typo.
+	(RTX_COSTS): Sort processor versions better.
+
 2001-11-15  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.md: Fix insn length of bit insns.
