* c-lang.c (finish_file): Don't emit static inline functions if 	they weren't referenced.
	* gcc.c-torture/execute/20011115-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47082 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-16  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-lang.c (finish_file): Don't emit static inline functions if
+	they weren't referenced.
+
 2001-11-15  Stan Shebs  <shebs@apple.com>
 
 	* expr.c (expand_expr, case COMPONENT_REF): Fix variable ref.
