--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov 16 06:37:05 2001  Andreas Tobler  <a.tobler@schweiz.ch>
+
+	* config/sparc/sparc.c: Remove ALIGN arg from emit_cmp_insn.
+
 2001-11-16  Jakub Jelinek  <jakub@redhat.com>
 
 	* c-lang.c (finish_file): Don't emit static inline functions if
