--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Nov 16 07:12:51 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* expr.c (expand_expr, case ADDR_EXPR): Only copy for misaligned if
+	BLKmode.
+
 Fri Nov 16 06:37:05 2001  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	* config/sparc/sparc.c: Remove ALIGN arg from emit_cmp_insn.
