* unroll.c (copy_loop_body): Initialize JUMP_LABEL field after 	creating a new jump insn.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47090 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,9 @@
-Fri Nov 16 09:06:25 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+2001-11-16  Jeff Law  <law@redhat.com>
+
+	* unroll.c (copy_loop_body): Initialize JUMP_LABEL field after
+	creating a new jump insn.
+
+Fri Nov 13 09:06:25 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* expr.c (expand_expr, case ADDR_EXPR): Refine test for when to
 	copy misaligned data.
