--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-16  Mark Wielaard  <mark@klomp.org>
+
+	* java/util/Timer.java (TaskQueue.isStopped): Remove method.
+	(Scheduler.run): Try to re-schedule task and ignore exception if
+	queue has been stopped.
+
 2001-11-15  Tom Tromey  <tromey@redhat.com>
 
 	* verify.cc (type::compatible): Use _Jv_IsAssignableFrom.
