--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -18454,8 +18454,8 @@
         (unspec:TI [(const_int 0)] 45))]
   "TARGET_SSE"
   "xorps\t{%0, %0|%0, %0}"
-  [(set_attr "type" "sse")])
-
+  [(set_attr "type" "sse")
+   (set_attr "memory" "none")])
 
 ;; SSE mask-generating compares
 
@@ -18475,7 +18475,13 @@
 			      [(match_operand:V4SF 1 "register_operand" "0")
 			       (match_operand:V4SF 2 "nonimmediate_operand" "x")])))]
   "TARGET_SSE"
-  "cmpn%D3ps\t{%2, %0|%0, %2}"
+  "*
+{
+  if (GET_CODE (operands[3]) == UNORDERED)
+    return \"cmpordps\t{%2, %0|%0, %2}\";
+
+  return \"cmpn%D3ps\t{%2, %0|%0, %2}\";
+}"
   [(set_attr "type" "sse")])
 
 (define_insn "vmmaskcmpv4sf3"
@@ -18500,7 +18506,13 @@
 	 (subreg:V4SI (match_dup 1) 0)
 	 (const_int 1)))]
   "TARGET_SSE"
-  "cmp%D3ss\t{%2, %0|%0, %2}"
+  "*
+{
+  if (GET_CODE (operands[3]) == UNORDERED)
+    return \"cmpordss\t{%2, %0|%0, %2}\";
+
+  return \"cmpn%D3ss\t{%2, %0|%0, %2}\";
+}"
   [(set_attr "type" "sse")])
 
 (define_insn "sse_comi"
@@ -18645,7 +18657,7 @@
 	(vec_merge:V4SF (match_operand:V4SF 1 "register_operand" "0")
 	 		(vec_duplicate:V4SF
 			 (float:SF (match_operand:SI 2 "register_operand" "rm")))
-			(const_int 15)))]
+			(const_int 14)))]
   "TARGET_SSE"
   "cvtsi2ss\t{%2, %0|%0, %2}"
   [(set_attr "type" "sse")])
@@ -18855,7 +18867,8 @@
 		  (match_operand:DI 2 "nonimmediate_operand" "ym"))] 45))]
   "TARGET_MMX"
   "pxor\t{%2, %0|%0, %2}"
-  [(set_attr "type" "mmx")])
+  [(set_attr "type" "mmx")
+   (set_attr "memory" "none")])
 
 ;; Same as pxor, but don't show input operands so that we don't think
 ;; they are live.
@@ -18954,10 +18967,9 @@
 (define_insn "mmx_pshufw"
   [(set (match_operand:V4HI 0 "register_operand" "=y")
         (unspec:V4HI [(match_operand:V4HI 1 "register_operand" "0")
-		      (match_operand:V4HI 2 "nonimmediate_operand" "ym")
-		      (match_operand:SI 3 "immediate_operand" "i")] 41))]
+		      (match_operand:SI 2 "immediate_operand" "i")] 41))]
   "TARGET_SSE || TARGET_3DNOW_A"
-  "pshufw\t{%3, %2, %0|%0, %2, %3}"
+  "pshufw\t{%2, %1, %0|%0, %1, %2}"
   [(set_attr "type" "sse")])
 
 
@@ -19293,14 +19305,16 @@
   [(unspec_volatile [(match_operand:SI 0 "memory_operand" "m")] 37)]
   "TARGET_MMX"
   "ldmxcsr\t%0"
-  [(set_attr "type" "mmx")])
+  [(set_attr "type" "mmx")
+   (set_attr "memory" "load")])
 
 (define_insn "stmxcsr"
   [(set (match_operand:SI 0 "memory_operand" "=m")
 	(unspec_volatile:SI [(const_int 0)] 40))]
   "TARGET_MMX"
   "stmxcsr\t%0"
-  [(set_attr "type" "mmx")])
+  [(set_attr "type" "mmx")
+   (set_attr "memory" "store")])
 
 (define_expand "sfence"
   [(set (match_dup 0)
