--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Nov 16 15:22:35 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* config/pa/pa.c: Reflect changes in calling sequences of alter_reg and
+	emit_cmp_insn.
+
 2001-11-16  Andreas Jaeger  <aj@suse.de>
 
 	* cfglayout.c (fixup_fallthru_exit_predecesor): Make void, rename
