2001-11-16  John David Anglin  <dave@hiauly1.hia.nrc.ca>
	* Makefile.in: Add MAKEOVERRIDES= to suppress exporting
	environment to (sub)shells.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47106 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-16  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* Makefile.in: Add MAKEOVERRIDES= to suppress exporting
+	environment to (sub)shells.
+
 2001-11-13  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* Makefile.in: Change dependencies on stamp files
