--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* regex.c: Check defined(__STDC__) || defined(HAVE_STRINGIZE)
+	to determine whether ISO CPP token pasting is available.
+
 Thu Nov 15 11:06:25 2001  Jeffrey A Law  (law@cygnus.com)
 
 	* config.in (HAVE_UINTPTR_T): Provide autoconf stub.
