2001-11-16  Aldy Hernandez  <aldyh@redhat.com>
	* config/rs6000/rs6000.md: Change all ldvx to lvx.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47113 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-16  Aldy Hernandez  <aldyh@redhat.com>
+
+	* config/rs6000/rs6000.md: Change all ldvx to lvx.
+
 2001-11-16  Alexandre Oliva  <aoliva@redhat.com>
 
 	* gensupport.c (process_rtx): Don't assume filename is the first
