--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -13393,7 +13393,7 @@
   "TARGET_ALTIVEC"
   "@
    stvx %1,%y0
-   ldvx %0,%y1
+   lvx %0,%y1
    vor %0,%1,%1"
   [(set_attr "type" "altivec")])
 
@@ -13409,7 +13409,7 @@
   "TARGET_ALTIVEC"
   "@
    stvx %1,%y0
-   ldvx %0,%y1
+   lvx %0,%y1
    vor %0,%1,%1"
   [(set_attr "type" "altivec")])
 
@@ -13425,7 +13425,7 @@
   "TARGET_ALTIVEC"
   "@
    stvx %1,%y0
-   ldvx %0,%y1
+   lvx %0,%y1
    vor %0,%1,%1"
   [(set_attr "type" "altivec")])
 
@@ -13441,7 +13441,7 @@
   "TARGET_ALTIVEC"
   "@
    stvx %1,%y0
-   ldvx %0,%y1
+   lvx %0,%y1
    vor %0,%1,%1"
   [(set_attr "type" "altivec")])
 
