--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat Nov 17 08:20:44 2001  Douglas Rupp  <rupp@gnat.com>
+
+	* config/alpha/vms.h (REG_ALLOC_ORDER): Redefine.
+
 2001-11-16  Aldy Hernandez  <aldyh@redhat.com>
 
 	* config/rs6000/rs6000.md: Change all ldvx to lvx.
