* config/rs6000/rs6000.h (REG_CLASS_CONTENTS): Fix the         AltiVec-related bitfields.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47127 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-17  Stan Shebs  <shebs@apple.com>
+
+	* config/rs6000/rs6000.h (REG_CLASS_CONTENTS): Fix the
+	AltiVec-related bitfields.
+
 Sat Nov 17 12:06:31 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* except.c (enum eh_region_type): Add ERT_UNKNOWN.
