Obvious jni weak reference fix
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47128 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-17  Anthony Green  <green@redhat.com>
+
+	* jni.cc (unwrap): Fix test for wrapped objects.
+
 2001-11-16  Tom Tromey  <tromey@redhat.com>
 
 	* verify.cc (_Jv_BytecodeVerifier::check_field_constant): Handle
