--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-17  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	PR target/4606
+	* config.gcc: Remove reference to va-clipper.h.
+
 2001-11-17  Stan Shebs  <shebs@apple.com>
 
 	* config/rs6000/rs6000.h (REG_CLASS_CONTENTS): Fix the
