2001-11-17  Craig Rodrigues  <rodrigc@gcc.gnu.org>
	* MAINTAINERS (GNATS only accounts): Remove self.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47131 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-17  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	* MAINTAINERS (GNATS only accounts): Remove self.
+
 2001-11-14  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* configure.in (noconfigdirs) [h8300*-*-*, h8500-*-*]: Disable
