--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Sat Nov 17 23:30:44 2001  Douglas B. Rupp  <rupp@gnat.com>
+
+	* config/alpha/t-vms (LIB2FUNCS_EXTRA): Add vms_tramp.asm.
+	* config/alpha/vms_tramp.asm: New file.
+	* config/alpha/vms-tramp.asm: Removed.
+
 2001-11-18  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* c-common.c (struct disabled_builtin, disabled_builtins,
