* decl.c (create_array_type_for_decl): Check if NAME is NULL_TREE 	when displaying error message about missing array bounds.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47136 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2001-11-17  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
+	* decl.c (create_array_type_for_decl): Check if NAME is NULL_TREE
+	when displaying error message about missing array bounds.
+
+2001-11-17  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
 	* mangle.c (write_expression): Handle CAST_EXPR, STATIC_CAST_EXPR,
 	CONST_CAST_EXPR.
 	* operators.def: Add CAST_EXPR, STATIC_CAST_EXPR, CONST_CAST_EXPR.
